--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantum Cryptography Simulator</title>
+    <title>Quantum Coder - Secure Message Encryption</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">Quantum Crypto</div>
+            <div class="logo">Quantum Coder</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#how-it-works">How It Works</a></li>
@@ -21,13 +21,30 @@
 
     <main>
         <section id="home" class="hero">
-            <h1>Quantum Cryptography Simulator</h1>
+            <h1>Quantum Coder</h1>
             <p>Experience the future of secure communication through quantum principles</p>
         </section>
 
         <section id="how-it-works" class="concept-section">
             <h2>Understanding Quantum Cryptography</h2>
             
+            <div class="video-section">
+                <h3>Watch: How Quantum Cryptography Works</h3>
+                <div class="video-container">
+                    <iframe width="560" height="315" 
+                            src="https://www.youtube.com/embed/UiJiXNEm-Go" 
+                            title="Quantum Cryptography Explained" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                    </iframe>
+                </div>
+                <p class="video-description">
+                    Watch this comprehensive explanation of quantum cryptography by Veritasium. 
+                    Learn about the fascinating principles of quantum mechanics that make quantum encryption possible.
+                </p>
+            </div>
+
             <div class="concept-grid">
                 <div class="concept-card">
                     <h3>What is Quantum Cryptography?</h3>
@@ -156,7 +173,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Quantum Crypto Simulator. All rights reserved.</p>
+            <p>&copy; 2025 Quantum Coder. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
